--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
 	"author": "r1nzler_",
 	"license": "MIT",
 	"dependencies": {
+		"@types/socket.io": "^2.1.2",
 		"bcrypt-nodejs": "0.0.3",
 		"body-parser": "^1.18.3",
 		"connect-multiparty": "^2.2.0",
@@ -19,7 +20,8 @@
 		"jwt-simple": "^0.5.5",
 		"moment": "^2.22.2",
 		"mongoose": "^5.3.2",
-		"mongoose-pagination": "^1.0.0"
+		"mongoose-pagination": "^1.0.0",
+		"socket.io": "^2.2.0"
 	},
 	"devDependencies": {
 		"eslint": "^5.9.0",
